jangaroo/jangaroo-compiler-itests/src/test/joo/error/cyclic/CyclicDependencyA.as

package error.cyclic {

public class CyclicDependencyA {
  public static const b:CyclicDependencyB = new CyclicDependencyB();
}
}